# deadjokes

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TECHDEBDT.md  docker-compose.api.yaml  docker-compose.db.yaml  docker-compose.elastic.yaml  docker-compose.infra.yaml
.data/db/: init.sql
.data/infra/: init-elastic.sh
.data/infra/logstash/: logstash.conf
.github/workflows/: api-check.yml
api/: Cargo.toml
api/src/: dto.rs  error_handler.rs  lib.rs  query.rs  response.rs  router.rs
api/src/dto/: joke.rs
api/src/router/: jokes.rs
api/src/router/jokes/: get.rs  post.rs  put.rs
app/: Cargo.toml
app/src/: error.rs  joke.rs  lib.rs  query.rs  traits.rs
app/src/joke/: service.rs
config/: Cargo.toml
config/src/: api.rs  api_config.rs  common.rs  infra.rs  infra_config.rs  lib.rs
entity/: Cargo.toml
entity/src/: joke.rs  lib.rs
infra/: Cargo.toml
infra/src/: db.rs  fs.rs  lib.rs  logging.rs  tcp.rs  tracing.rs
infra/src/db/: joke_repository.rs  map_err.rs  pool.rs
infra/src/fs/: assets.rs
infra/src/tracing/: logstash.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230501_000001_initial_migration.rs  m20230502_000001_initial_seed.rs
src/: container.rs  main.rs
