[package]
name = "deadjokes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "app", "config", "infra", "entity", "migration"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = { version = "0.1" }
base64 = { version = "0.21" }
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "5.0" }
dotenv = { version = "0.15" }
dropbox-sdk = { version = "0.16", default-features = false, features = [
    "default_client",
    "dbx_files",
] }
either = { version = "1.9", features = ["serde"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18", features = [
    "rt-tokio-current-thread",
] }
sea-orm = { version = "0.12", features = [
    "macros",
    "sqlx-postgres",
    "runtime-actix-rustls",
    "with-chrono",
    "with-uuid",
    "postgres-array",
] }
sea-query = { version = "0.30", features = [
    "derive",
    "attr",
    "thread-safe",
    "backend-postgres",
    "with-chrono",
    "with-uuid",
    "postgres-array",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shaku = { version = "0.6" }
strum = { version = "0.25" }
strum_macros = { version = "0.25" }
tokio = { version = "1", features = ["time"] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_19"] }
tracing-bunyan-formatter = { version = "0.3" }
tracing-opentelemetry = { version = "0.19" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = { version = "2.4" }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dependencies]
api = { path = "api" }
app = { path = "app" }
config = { path = "config" }
infra = { path = "infra" }
entity = { path = "entity" }
dotenv = { workspace = true }
shaku = { workspace = true }
