[package]
name = "deadjokes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "app", "config", "infra", "entity", "migration"]

[workspace.dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "5.0" }
futures = { version = "0.3" }
sea-orm = { version = "0.12", features = [
    "macros",
    "sqlx-postgres",
    "runtime-actix-rustls",
    "with-chrono",
    "with-uuid",
    "postgres-array",
] }
sea-query = { version = "0.30", features = [
    "derive",
    "attr",
    "thread-safe",
    "backend-postgres",
    "with-chrono",
    "with-uuid",
    "postgres-array",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shaku = { version = "0.6" }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
url = { version = "2.4" }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dependencies]
api = { path = "api" }
app = { path = "app" }
config = { path = "config" }
infra = { path = "infra" }
entity = { path = "entity" }
dotenv = { version = "0.15" }
env_logger = { version = "0.10" }
shaku = { workspace = true }
