[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
config = { path = "../config" }
infra = { path = "../infra" }
actix-cors = { version = "0.6" }
actix-files = { version = "0.6" }
actix-web = { version = "4" }
actix-web-lab = { version = "0.19.2" }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
uuid = { workspace = true }
