[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
chrono = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
uuid = { workspace = true }
