[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
config = { path = "../config" }
entity = { path = "../entity" }
migration = { path = "../migration" }
async-trait = { workspace = true }

dropbox-sdk = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
either = { workspace = true }
fern = "0.6"
futures = { workspace = true }
futures-util = { workspace = true }
log = { version = "0.4" }                                        # only to set db logging level
nlprule = { version = "0.6.4" }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
rand = { version = "0.8" }
reqwest = { version = "0.11", features = ["json", "multipart"] }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shaku = { workspace = true }
sqlx = "*"                                                       # only for error type
tokio = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
