[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
config = { path = "../config" }
entity = { path = "../entity" }
migration = { path = "../migration" }
async-trait = { workspace = true }

dropbox-sdk = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
log4rs = { version = "1.2" }
qoollo-log4rs-logstash = { version = "0.2" }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
rand = { version = "0.8" }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { version = "0.3" }
shaku = { workspace = true }
sqlx = "*"                                   # only for error type
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
