[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
config = { path = "../config" }
entity = { path = "../entity" }
migration = { path = "../migration" }
async-trait = { workspace = true }
chrono = { workspace = true }
dropbox-sdk = { version = "0.16", default-features = false, features = [
    "default_client",
    "dbx_files",
] }
dirs = { workspace = true }
futures = { workspace = true }
futures-util = { version = "0.3" }
log = { version = "0.4" }
opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.19", features = [
    "rt-tokio-current-thread",
    "collector_client",
    "reqwest_collector_client",
] }
native-tls = { version = "0.2" }
rand = { version = "0.8" }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { version = "0.3" }
shaku = { workspace = true }
sqlx = "*" # only for error type
tokio = { version = "1", features = ["time"] }
tracing = { workspace = true }
tracing-bunyan-formatter = { version = "0.3" }
tracing-opentelemetry = { version = "0.21" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = { workspace = true }
uuid = { workspace = true }
